--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
 
 /* Your CSS Code here. */
+td,th{
+    border: 1px solid black;
+    text-align: center;
+}
+table{
+    border-collapse: collapse;
+    width: 150px;
+}
